feat: add ChatGPT Developer Mode support (HTTP transport)
- Add HTTP server with StreamableHTTP transport for ChatGPT
- Update SSE server with health checks and CORS
- Support --http and --sse flags in entry point
- Add dev:http and start:http scripts
- Add comprehensive ChatGPT setup documentation
- Update README with ChatGPT instructions and server modes

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -80,3 +80,4 @@ nav:
     - EVM Module: mcp-server/evm-module.md
     - Resources & Prompts: mcp-server/resources-prompts.md
     - Development: mcp-server/development.md
+    - ChatGPT Setup: mcp-server/chatgpt-setup.md
